- update to reveal 3.4.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,143 +1,188 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>se.hakim</groupId>
-	<artifactId>reveal-js</artifactId>
-	<version>3.4.0</version>
-	<properties>
-		<js.output.dir>${project.build.directory}/js</js.output.dir>
-	</properties>
-	<build>        
-		<outputDirectory>${js.output.dir}</outputDirectory>
-		<resources>
-			<resource>
-				<directory>src/main/js</directory>
-				<targetPath>${js.output.dir}</targetPath>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<groupId>com.github.eirslett</groupId>
-				<artifactId>frontend-maven-plugin</artifactId>                    
-				<version>1.0</version>
-				<executions>
-					<execution>
-						<id>install node and npm and execute bower</id>
-						<goals>
-							<goal>install-node-and-npm</goal>
-							<goal>npm</goal>
-							<goal>bower</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<nodeVersion>v5.3.0</nodeVersion>
-					<npmVersion>3.3.12</npmVersion>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.7</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>resources</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<encoding>UTF-8</encoding>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>com.google.code.maven-replacer-plugin</groupId>
-				<artifactId>replacer</artifactId>
-				<version>1.5.3</version>
-				<executions>                    
-					<execution>
-						<id>modify package.json</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>replace</goal>
-						</goals>
-						<configuration>
-							<includes>
-								<include>reveal.js/package.json</include>                                
-							</includes>                            
-							<regex>true</regex>
-							<replacements>
-								<replacement>
-									<token>"dependencies"\s*:</token>
-									<value>"nodeDependencies":</value>
-								</replacement>
-								<replacement>
-									<token>"reveal.js"</token>
-									<value>"reveal-js"</value>
-								</replacement>
-							</replacements>
-						</configuration>
-					</execution>
-					<execution>
-						<id>integrate markdown patch</id>
-						<phase>process-resources</phase>
-						<goals>
-							<goal>replace</goal>
-						</goals>
-						<configuration>
-							<includes>
-								<include>reveal.js/plugin/markdown/markdown.js</include>
-							</includes>                            
-							<regex>true</regex>
-							<replacements>
-								<replacement>
-									<token>(xhr.open\([^)]*\);)</token>
-									<value>$1 var accept = section.getAttribute( 'data-accept' );xhr.setRequestHeader("Accept",accept||"text/plain");</value>
-								</replacement>
-							</replacements>
-						</configuration>
-					</execution>
-				</executions>
-				<configuration>
-					<basedir>${js.output.dir}</basedir>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>de.conterra.jsregistry</groupId>
-				<artifactId>ct-jsregistry-maven-plugin</artifactId>
-				<version>1.0.26</version>
-				<executions>
-					<execution>                       
-						<id>create metadata, optimize css and inline strings</id>
-						<goals>                            
-							<goal>buildPacksProperties</goal>
-							<goal>calculateDependencies</goal>                            
-							<goal>optimizeCSS</goal>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>de.conterra.devnet</groupId>
+    <artifactId>mapapps-reveal-js</artifactId>
+    <version>3.4.1-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <js.output.dir>${project.build.directory}/js</js.output.dir>
+        <ct.jsregistry.version>1.0.26</ct.jsregistry.version>
+        <!-- required for release build -->
+        <scm.push>false</scm.push>
+        <scm.username>${env.USER_NAME}</scm.username>
+        <scm.password>${env.USER_PW}</scm.password>
+    </properties>
+    <build>
+        <outputDirectory>${js.output.dir}</outputDirectory>
+        <resources>
+            <resource>
+                <directory>src/main/js</directory>
+                <targetPath>${js.output.dir}</targetPath>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>com.github.eirslett</groupId>
+                <artifactId>frontend-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                    <execution>
+                        <id>install node and npm and execute bower</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                            <goal>npm</goal>
+                            <goal>bower</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <nodeVersion>v5.3.0</nodeVersion>
+                    <npmVersion>3.3.12</npmVersion>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>resources</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <id>modify package.json</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>reveal.js/package.json</include>
+                            </includes>
+                            <regex>true</regex>
+                            <replacements>
+                                <replacement>
+                                    <token>"dependencies"\s*:</token>
+                                    <value>"nodeDependencies":</value>
+                                </replacement>
+                                <replacement>
+                                    <token>"reveal.js"</token>
+                                    <value>"reveal-js"</value>
+                                </replacement>
+                            </replacements>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>integrate markdown patch</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>reveal.js/plugin/markdown/markdown.js</include>
+                            </includes>
+                            <regex>true</regex>
+                            <replacements>
+                                <replacement>
+                                    <token>(xhr.open\([^)]*\);)</token>
+                                    <value>$1 var accept = section.getAttribute( 'data-accept' );xhr.setRequestHeader("Accept",accept||"text/plain");</value>
+                                </replacement>
+                            </replacements>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <basedir>${js.output.dir}</basedir>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>de.conterra.jsregistry</groupId>
+                <artifactId>ct-jsregistry-maven-plugin</artifactId>
+                <version>1.0.26</version>
+                <executions>
+                    <execution>
+                        <id>create metadata, optimize css and inline strings</id>
+                        <goals>
+                            <goal>buildPacksProperties</goal>
+                            <goal>calculateDependencies</goal>
+                            <goal>optimizeCSS</goal>
                             <goal>optimizeJS</goal>
-						</goals>                        
-					</execution>
-				</executions>
-				<configuration>
-					<sourceDirectory>${js.output.dir}</sourceDirectory>
-					<outputDirectory>${js.output.dir}</outputDirectory>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
-				<!--<configuration>
-                    <excludes>
-                        <exclude>**/*.styl</exclude>
-                        <exclude>**/doc/**</exclude>
-                    </excludes>
-                </configuration>-->
-			</plugin>
-		</plugins>
-	</build>
-	<distributionManagement>
-		<repository>
-			<id>ct-dist-releases-file</id>
-			<name>repository for sdi.suite releases</name>
-			<url>file://///vsdev0860.esri-de.com/repo-internal/releases</url>
-		</repository>
-	</distributionManagement>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <sourceDirectory>${js.output.dir}</sourceDirectory>
+                    <outputDirectory>${js.output.dir}</outputDirectory>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+            </plugin>
+        </plugins>
+    </build>
+    <scm>
+        <developerConnection>scm:git:https://github.com/conterra/mapapps-reveal-js.git</developerConnection>
+        <url>https://github.com/conterra/mapapps-reveal-js</url>
+        <tag>HEAD</tag>
+    </scm>
+    <distributionManagement>
+        <repository>
+            <id>ct-dist-releases-file</id>
+            <name>repository for sdi.suite releases</name>
+            <url>${release.deployment.url}</url>
+        </repository>
+        <snapshotRepository>
+            <id>ct-dist-snapshots-file</id>
+            <name>repository for sdi.suite snapshots</name>
+            <url>${snapshot.deployment.url}</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <profiles>
+        <profile>
+            <id>github-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>de.jutzig</groupId>
+                        <artifactId>github-release-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>github-upload</id>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>release</goal>
+                                </goals>
+                                <configuration>
+                                    <tag>${project.version}</tag>
+                                    <!--<artifact>${project.build.directory}/${project.groupId}.${project.artifactId}-${project.version}.jar</artifact>-->
+                                    <!--<fileSets>
+                                        <fileSet>
+                                            <directory>${project.build.directory}</directory>
+                                            <includes>
+                                                <include>${project.artifactId}*.tar.gz</include>
+                                                <include>${project.artifactId}*.zip</include>
+                                            </includes>
+                                        </fileSet>
+                                    </fileSets>-->
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
