--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,19 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.6</version>
             </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
+                <configuration>
+                    <tagNameFormat>@{project.version}</tagNameFormat>
+                    <preparationGoals>clean</preparationGoals>
+                    <releaseProfiles>github-release</releaseProfiles>
+                    <!-- for git release plugin-->
+                    <arguments>-Dusername=${scm.username} -Dpassword=${scm.password}</arguments>
+                    <username>${scm.username}</username>
+                    <password>${scm.password}</password>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <scm>
@@ -167,7 +180,7 @@
                                 </goals>
                                 <configuration>
                                     <tag>${project.version}</tag>
-                                    <!--<artifact>${project.build.directory}/${project.groupId}.${project.artifactId}-${project.version}.jar</artifact>-->
+                                    <artifact>${project.build.directory}/${project.artifactId}.jar</artifact>
                                     <!--<fileSets>
                                         <fileSet>
                                             <directory>${project.build.directory}</directory>
