--- a/pom.xml
+++ b/pom.xml
@@ -138,16 +138,23 @@
                     <tagNameFormat>@{project.version}</tagNameFormat>
                     <preparationGoals>clean</preparationGoals>
                     <releaseProfiles>github-release</releaseProfiles>
+                    <!-- disable src and javadoc -->
+                    <useReleaseProfile>false</useReleaseProfile>
                     <!-- for git release plugin-->
                     <arguments>-Dusername=${scm.username} -Dpassword=${scm.password}</arguments>
                     <username>${scm.username}</username>
                     <password>${scm.password}</password>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+            </plugin>
         </plugins>
     </build>
     <scm>
-        <developerConnection>scm:git:https://github.com/conterra/mapapps-reveal-js.git</developerConnection>
+        <connection>scm:git:https://github.com/conterra/mapapps-reveal-js.git</connection>
         <url>https://github.com/conterra/mapapps-reveal-js</url>
         <tag>HEAD</tag>
     </scm>
@@ -171,6 +178,7 @@
                     <plugin>
                         <groupId>de.jutzig</groupId>
                         <artifactId>github-release-plugin</artifactId>
+                        <version>1.2.0</version>
                         <executions>
                             <execution>
                                 <id>github-upload</id>
