--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
                 <configuration>
-                    <tagNameFormat>@{project.version}</tagNameFormat>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
                     <preparationGoals>clean</preparationGoals>
                     <releaseProfiles>github-release</releaseProfiles>
                     <!-- disable src and javadoc -->
@@ -187,7 +187,7 @@
                                     <goal>release</goal>
                                 </goals>
                                 <configuration>
-                                    <tag>${project.version}</tag>
+                                    <tag>v${project.version}</tag>
                                 </configuration>
                             </execution>
                         </executions>
