--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.conterra.devnet</groupId>
     <artifactId>mapapps-reveal-js</artifactId>
-    <version>3.4.1</version>
+    <version>3.4.2-SNAPSHOT</version>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <js.output.dir>${project.build.directory}/js</js.output.dir>
@@ -156,7 +156,7 @@
     <scm>
         <connection>scm:git:https://github.com/conterra/mapapps-reveal-js.git</connection>
         <url>https://github.com/conterra/mapapps-reveal-js</url>
-        <tag>v3.4.1</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <repository>
